--- a/Reading List.Domain/Reading List.Domain.csproj
+++ b/Reading List.Domain/Reading List.Domain.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.0" />
+  </ItemGroup>
+
 </Project>
